# cien-dias-rust

./: .gitignore  Readme.md
actors/: Cargo.toml
actors/src/: main.rs
anios-diff-wasmtime/: Cargo.toml  anios-diff.rs  anios-diff.wasm
anios-diff-wasmtime/src/: main.rs
auth/: Cargo.toml
auth/src/: app.rs  auth.rs  general.rs  main.rs  token.rs
auth0/: Cargo.toml
auth0/src/: auth0.rs  main.rs
canvas-plotter/: Cargo.toml
canvas-plotter/src/: lib.rs
cfgtest/: Cargo.toml
cfgtest/src/: iomod.rs  main.rs
cinco/: Cargo.toml
cinco/src/: main.rs
counter-wasm/: Cargo.toml
counter-wasm/src/: lib.rs
counter-wasm/www/: index.html  index.js  package-lock.json  package.json
cuatro/: Cargo.toml
cuatro/src/: generate.rs  main.rs
cuckoo-wapc/: Cargo.toml  schema.widl
cuckoo-wapc/nodehost/: nodehost.js  package.json
cuckoo-wapc/src/: generated.rs  lib.rs
cuckoo-wasm/: Cargo.toml
cuckoo-wasm/src/: lib.rs
diez/: input.txt  invalid.txt
diez/aliaserror/: Cargo.toml
diez/aliaserror/src/: main.rs
diez/withanyhow/: Cargo.toml
diez/withanyhow/src/: main.rs
diez/withthiserror/: Cargo.toml
diez/withthiserror/src/: main.rs
dos/: Cargo.toml
dos/src/: main.rs
dynafields/: Cargo.toml
dynafields/src/: main.rs
hello-grpc/: Cargo.toml  build.rs
hello-grpc/proto/: hellostreams.proto  persongreeter.proto
hello-grpc/src/: client.rs  person_client.rs  person_server.rs  server.rs  stream_client.rs  stream_server.rs
hello-world/: add.wasm  hola_mundo.rs  hola_mundo.wasm  index.html
hola_macros/: Cargo.toml
hola_macros/src/: lib.rs
hola_macros_client/: Cargo.toml
hola_macros_client/hola_macros_derive/: Cargo.toml
hola_macros_client/hola_macros_derive/src/: lib.rs
hola_macros_client/src/: holamacro.rs  main.rs
logs/: Cargo.toml
logs/src/: main.rs
mongo_iod_string/: Cargo.toml
mongo_iod_string/src/: main.rs
nueve/: Cargo.toml
nueve/src/: lib.rs
ocho/: Cargo.toml
ocho/src/: main.rs
once/: Cargo.toml
once/src/: lib.rs
request-reply-arch/basic-amiquip/: Cargo.toml
request-reply-arch/basic-amiquip/src/: main.rs
request-reply-arch/common-q/: Cargo.toml
request-reply-arch/common-q/src/: lib.rs
request-reply-arch/correlation-id/: Cargo.toml
request-reply-arch/correlation-id/src/: main.rs  producer.rs
seis/: Cargo.toml
seis/src/: main.rs
siete/: Cargo.toml
siete/src/: convertor.rs  lib.rs  main.rs  server.rs
spidey/: Cargo.toml
spidey/src/: main.rs
spin-hello-world/: Cargo.toml  spin.toml
spin-hello-world/src/: lib.rs
spin-redis/: Cargo.toml  spin.toml
spin-redis/src/: lib.rs
tres/: Cargo.toml  input.txt  output.txt
tres/src/: main.rs
uno/: Cargo.toml
uno/src/: main.rs
wapc_http/: Cargo.toml
wapc_http/src/: main.rs
wasmtime/: archivo.txt  archivos  archivos.rs  archivos.wasm  hola_mundo.wasm  hola_mundo.wat
website-summary/: Cargo.toml  spin.toml
website-summary/src/: lib.rs
