[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-session = { version = "0.6.2", features = ["cookie-session"] }
actix-identity = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.1.0"
log = "0.4.0"
env_logger = "0.9.0"
