[package]
name = "cuckoo-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
cuckoofilter = "0.5.0"
lazy_static = "1.4.0"
serde= { version = "1", features = ["derive"]}
