[package]
name = "hello-grpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hellogrpc-server"
path = "src/server.rs"

[[bin]]
name = "hellogrpc-client"
path = "src/client.rs"

[[bin]]
name = "person-client"
path = "src/person_client.rs"

[[bin]]
name = "person-server"
path = "src/person_server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}

[build-dependencies]
tonic-build = "0.8"
