[package]
name = "wapc_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
wapc = "1"
wapc-codec = "1"
wasmtime-provider = "1.1.0"